{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 9,
  "lineage": "cdd27488-00a1-6eec-c537-92995dcb19e4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "rapidoec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03f4878755434977f",
            "arn": "arn:aws:ec2:ap-south-1:535882993762:instance/i-01accd7324c66e51c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01accd7324c66e51c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraformkp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e5e1275c6748491c",
            "private_dns": "ip-10-1-1-208.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.208",
            "public_ip": "13.234.18.112",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dd3965fc79c38f5c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b7f0b95de309d774",
            "tags": {
              "Name": "rapidoec2"
            },
            "tags_all": {
              "Name": "rapidoec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c0352697b3b72a2b"
            ]
          },
          "dependencies": [
            "aws_key_pair.terraformkp",
            "aws_security_group.rapidoec2sg",
            "aws_subnet.rapidopubsn",
            "aws_vpc.rapidovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "rapidoigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:535882993762:internet-gateway/igw-0ebb97c6b358de690",
            "id": "igw-0ebb97c6b358de690",
            "owner_id": "535882993762",
            "tags": {
              "Name": "rapidoigw"
            },
            "tags_all": {
              "Name": "rapidoigw"
            },
            "vpc_id": "vpc-0554a17b07ea238fe"
          },
          "dependencies": [
            "aws_vpc.rapidovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rapidoigwrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:535882993762:route-table/rtb-02c41415864122836",
            "id": "rtb-02c41415864122836",
            "owner_id": "535882993762",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ebb97c6b358de690",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rapidoigwrt"
            },
            "tags_all": {
              "Name": "rapidoigwrt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0554a17b07ea238fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.rapidoigw",
            "aws_vpc.rapidovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rapidortpubsnassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01afd869971918dc0",
            "route_table_id": "rtb-02c41415864122836",
            "subnet_id": "subnet-0b7f0b95de309d774"
          },
          "dependencies": [
            "aws_internet_gateway.rapidoigw",
            "aws_route_table.rapidoigwrt",
            "aws_subnet.rapidopubsn",
            "aws_vpc.rapidovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rapidoec2sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:535882993762:security-group/sg-0c0352697b3b72a2b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c0352697b3b72a2b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240117012257175100000001",
            "name_prefix": "terraform-",
            "owner_id": "535882993762",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rapidoec2sg"
            },
            "tags_all": {
              "Name": "rapidoec2sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0554a17b07ea238fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.rapidovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rapidopubsn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:535882993762:subnet/subnet-0b7f0b95de309d774",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7f0b95de309d774",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535882993762",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rapidopubsn"
            },
            "tags_all": {
              "Name": "rapidopubsn"
            },
            "vpc_id": "vpc-0554a17b07ea238fe"
          },
          "dependencies": [
            "aws_vpc.rapidovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "rapidovpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:535882993762:vpc/vpc-0554a17b07ea238fe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-034a61454891d8aa7",
            "default_route_table_id": "rtb-030c9d975850be19b",
            "default_security_group_id": "sg-01f8c1cf5a0b8042a",
            "dhcp_options_id": "dopt-089d6d1aa0b1ed673",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0554a17b07ea238fe",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-030c9d975850be19b",
            "owner_id": "535882993762",
            "tags": {
              "Name": "rapidovpc"
            },
            "tags_all": {
              "Name": "rapidovpc"
            }
          }
        }
      ]
    }
  ]
}